db_script.txt
jankaacc@jan-y50:~$ cd repos
jankaacc@jan-y50:~/repos$ ls
flask_blog  second_website_flask  websitepython
jankaacc@jan-y50:~/repos$ cd second_website_flask/
jankaacc@jan-y50:~/repos/second_website_flask$ ls
flask  requirements.txt
jankaacc@jan-y50:~/repos/second_website_flask$ mkdir application
jankaacc@jan-y50:~/repos/second_website_flask$ cd application/
jankaacc@jan-y50:~/repos/second_website_flask/application$ mkdir static
jankaacc@jan-y50:~/repos/second_website_flask/application$ mkdir templates
jankaacc@jan-y50:~/repos/second_website_flask/application$ mkdri tmp
No command 'mkdri' found, did you mean:
 Command 'mkdir' from package 'coreutils' (main)
mkdri: command not found
jankaacc@jan-y50:~/repos/second_website_flask/application$ mkdir tmp
jankaacc@jan-y50:~/repos/second_website_flask/application$ cd ../
jankaacc@jan-y50:~/repos/second_website_flask$ ls
application  flask  requirements.txt
jankaacc@jan-y50:~/repos/second_website_flask$ cd flas
bash: cd: flas: No such file or directory
jankaacc@jan-y50:~/repos/second_website_flask$ cd
jankaacc@jan-y50:~$ cd repos
jankaacc@jan-y50:~/repos$ cd second_website_flask/
jankaacc@jan-y50:~/repos/second_website_flask$
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ pip install flask-script
Requirement already satisfied (use --upgrade to upgrade): flask-script in ./flask/lib/python3.5/site-packages
Requirement already satisfied (use --upgrade to upgrade): Flask in ./flask/lib/python3.5/site-packages (from flask-script)
Requirement already satisfied (use --upgrade to upgrade): itsdangerous>=0.21 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied (use --upgrade to upgrade): Jinja2>=2.4 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied (use --upgrade to upgrade): Werkzeug>=0.7 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied (use --upgrade to upgrade): click>=2.0 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied (use --upgrade to upgrade): MarkupSafe>=0.23 in ./flask/lib/python3.5/site-packages (from Jinja2>=2.4->Flask->flask-script)
You are using pip version 8.1.1, however version 9.0.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ pip install --upgrade pip 
Collecting pip
  Using cached pip-9.0.1-py2.py3-none-any.whl
Installing collected packages: pip
  Found existing installation: pip 8.1.1
    Uninstalling pip-8.1.1:
      Successfully uninstalled pip-8.1.1
Successfully installed pip-9.0.1
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ pip install -r flask-script
Could not open requirements file: [Errno 2] No such file or directory: 'flask-script'
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ pip install flask-script
Requirement already satisfied: flask-script in ./flask/lib/python3.5/site-packages
Requirement already satisfied: Flask in ./flask/lib/python3.5/site-packages (from flask-script)
Requirement already satisfied: Jinja2>=2.4 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied: itsdangerous>=0.21 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied: click>=2.0 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied: Werkzeug>=0.7 in ./flask/lib/python3.5/site-packages (from Flask->flask-script)
Requirement already satisfied: MarkupSafe>=0.23 in ./flask/lib/python3.5/site-packages (from Jinja2>=2.4->Flask->flask-script)
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ cd application/
(flask) jankaacc@jan-y50:~/repos/second_website_flask/application$ python3 manage.py shell
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 327-405-396
from application import db
from author.models import *
db.create_all()
^C>>> from application import db
>>> from author.models import *
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/home/jankaacc/repos/second_website_flask/application/author/models.py", line 3, in <module>
    class Author(db.Model):
  File "/home/jankaacc/repos/second_website_flask/application/author/models.py", line 10, in Author
    is_author = db.Column(db.Bolean)
AttributeError: 'SQLAlchemy' object has no attribute 'Bolean'
>>> from author.models import *
>>> db.create_all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py", line 1007, in create_all
    self._execute_for_all_tables(app, bind, 'create_all')
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py", line 999, in _execute_for_all_tables
    op(bind=self.get_engine(app, bind), **extra)
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py", line 941, in get_engine
    return connector.get_engine()
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py", line 543, in get_engine
    self._engine = rv = sqlalchemy.create_engine(info, **options)
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/sqlalchemy/engine/__init__.py", line 391, in create_engine
    return strategy.create(*args, **kwargs)
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/sqlalchemy/engine/strategies.py", line 80, in create
    dbapi = dialect_cls.dbapi(**dbapi_args)
  File "/home/jankaacc/repos/second_website_flask/flask/lib/python3.5/site-packages/sqlalchemy/dialects/postgresql/psycopg2.py", line 554, in dbapi
    import psycopg2
ImportError: No module named 'psycopg2'
>>> 
KeyboardInterrupt
>>> exit()
(flask) jankaacc@jan-y50:~/repos/second_website_flask/application$ cd ../
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ ls
application  flask  requirements.txt
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ pip install psycopg2
Collecting psycopg2
  Downloading psycopg2-2.7.3.1-cp35-cp35m-manylinux1_x86_64.whl (2.6MB)
    100% |████████████████████████████████| 2.6MB 669kB/s 
Installing collected packages: psycopg2
Successfully installed psycopg2-2.7.3.1
(flask) jankaacc@jan-y50:~/repos/second_website_flask$ cd application/
(flask) jankaacc@jan-y50:~/repos/second_website_flask/application$ python3 manage.py shell
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 327-405-396
^C>>> from application import db
>>> from author.models import *
>>> db.create_all()
>>> author = Author(
... 'Jorge Escobar', jorge@gmail.com', 'jorge', '12345', True
  File "<console>", line 2
    'Jorge Escobar', jorge@gmail.com', 'jorge', '12345', True
                                       ^
SyntaxError: invalid syntax
>>> author = Author('Jorge Escobar', jorge@gmail.com', 'jorge', '12345', True)
  File "<console>", line 1
    author = Author('Jorge Escobar', jorge@gmail.com', 'jorge', '12345', True)
                                                       ^
SyntaxError: invalid syntax
>>> author = Author('Jorge Escobar', 'jorge@gmail.com', 'jorge', '12345', True)
>>> author
<Author 'jorge'>
>>> db.session.add(author)
>>> db.session.commit()
>>> author = Author('Jan Mikolajczak', 'jan@gmail.com', 'jankaacc', '12345', True)
>>> db.session.commit()
>>> db.session.add(author)
>>> db.session.commit()
>>> authors = Author.query.all()
>>> authors
[<Author 'jorge'>, <Author 'jankaacc'>]
>>> authors[0]
<Author 'jorge'>
>>> authors[1]
<Author 'jankaacc'>
>>> authors[1].fullname
'Jan Mikolajczak'
>>> authors = Author.query.filter_by(username = 'jankaacc').first()
>>> authors
<Author 'jankaacc'>
>>> 
KeyboardInterrupt
>>> 

